--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://mongo:Dadapapa4141@cluster0.b09qu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_HOST=localhost
+MONGO_PORT=27017
