--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cli-helpers==2.3.0
 click==8.0.4
 colorama==0.4.5
 configobj==5.0.8
-dataclasses==0.8
+#dataclasses==0.8
 et-xmlfile==1.1.0
 Flask==2.0.3
 Flask-PyMongo==2.3.0
